--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,6 @@ jobs:
         with:
           ref: ${{ github.event.release.tag_name }}
           fetch-depth: 0
-
       - name: Extract version
         id: tag
         uses: olegtarasov/get-tag@v2.1.1
@@ -31,6 +30,14 @@ jobs:
 
       - name: Checkout/create release branch
         run: git checkout ${{ steps.release-branch.outputs.name }} || git checkout -b ${{ steps.release-branch.outputs.name }}
+
+      - name: Check if branch exists on remote
+        id: release-branch-exists
+        run: echo "::set-output name=exists::$(git ls-remote --heads ${{ github.server_url }}/${{ github.repository }} ${{ steps.release-branch.outputs.name }} | wc -l)"
+
+      - name: Create release branch if it's not exist
+        if: ${{ steps.release-branch-exists.outputs.exists == '0' }}
+        run: git push -u origin ${{ steps.release-branch.outputs.name }}
 
       - name: Sync release branch with released tag
         run: git reset --hard ${{ github.event.release.tag_name }}
