--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "@types/jest": "27.5.0",
     "@types/jscodeshift": "^0.11.5",
     "@types/node": "^16.0.0",
-    "eslint-kit": "^4.0.2",
+    "eslint": "^8.38.0",
+    "eslint-kit": "^7.0.0",
     "jest": "28.0.3",
     "source-map-support": "^0.5.20",
     "ts-jest": "28.0.1",
