--- a/.prettierrc
+++ b/.prettierrc
@@ -2,22 +2,5 @@
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "quoteProps": "consistent",
-  "endOfLine": "lf",
-  "importOrder": [
-    "^(child_process|crypto|events|fs|http|https|os|path)(\\/(.*))?$",
-    "<THIRD_PARTY_MODULES>",
-    "^~(\\/(.*))?$",
-    "^@app(\\/(.*))?$",
-    "^[./]"
-  ],
-  "importOrderParserPlugins": [
-    "typescript",
-    "classProperties",
-    "decorators-legacy"
-  ],
-  "experimentalBabelParserPluginsList": [
-    "jsx",
-    "typescript"
-  ]
+  "quoteProps": "consistent"
 }
