--- a/package.json
+++ b/package.json
@@ -11,6 +11,23 @@
   "bin": {
     "eslint-kit-cli": "dist/main.js"
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -19,12 +36,13 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src}/**/*.{js,ts}\"",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "lint:fix": "eslint \"{src}/**/*.{js,ts}\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -53,31 +71,15 @@
     "@types/jest": "27.5.0",
     "@types/jscodeshift": "^0.11.5",
     "@types/node": "^16.0.0",
-    "eslint": "^8.38.0",
-    "eslint-kit": "^7.0.0",
+    "eslint": "^8.41.0",
+    "eslint-kit": "^10.0.0",
     "jest": "28.0.3",
     "source-map-support": "^0.5.20",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "typescript": "^4.3.5",
+    "prettier": "^3.0.0"
   }
 }
