--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@ lerna-debug.log*
 # Project
 .env
 src/zod-generated
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
