--- a/package.json
+++ b/package.json
@@ -79,5 +79,6 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.7.4"
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
