--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,20 +14,18 @@ jobs:
           git config --global user.email "<>"
 
       - name: Checkout to tag
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.release.tag_name }}
           fetch-depth: 0
 
-      - name: Extract version
-        id: tag
-        uses: olegtarasov/get-tag@v2.1.1
-        with:
-          tagRegex: 'v(?<full>(?<version>[0-9.]*)(?:-(?<rc>.*))?)'
+      - name: Parse version from tag
+        id: version
+        uses: release-kit/semver@v2
 
       - name: Get release branch name
         id: release-branch
-        run: echo "::set-output name=name::${{ steps.tag.outputs.rc != null && 'release/${{ steps.tag.outputs.rc }}' || 'release/latest' }}"
+        run: echo "::set-output name=name::${{ steps.version.outputs.prerelease != null && 'release/${{ steps.version.outputs.prerelease }}' || 'release/latest' }}"
 
       - name: Checkout/create release branch
         run: git checkout ${{ steps.release-branch.outputs.name }} || git checkout -b ${{ steps.release-branch.outputs.name }}
@@ -52,20 +50,11 @@ jobs:
           force: true
           unprotect_reviews: true
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
-
-      - name: Check build cache
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: dist
-          key: ${{ hashFiles('./yarn.lock', './src/**', './rollup.config.js', './jest.config.js') }}
+          node-version: 20
 
       - name: Create a new build
-        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           yarn install --frozen-lockfile
           yarn test
@@ -74,7 +63,7 @@ jobs:
       - name: Set version from release
         uses: reedyuk/npm-version@1.0.1
         with:
-          version: ${{ steps.tag.outputs.full }}
+          version: ${{ steps.version.outputs.full }}
 
       - name: Create NPM config
         run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
@@ -82,9 +71,9 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish latest
-        if: ${{ steps.tag.outputs.rc == null }}
+        if: ${{ steps.version.outputs.prerelease == '' }}
         run: npm publish
 
       - name: Publish RC
-        if: ${{ steps.tag.outputs.rc != null }}
-        run: npm publish --tag ${{ steps.tag.outputs.rc }}
+        if: ${{ steps.version.outputs.prerelease != '' }}
+        run: npm publish --tag ${{ steps.version.outputs.prerelease }}
