--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/axios": "^0.14.0",
+    "@types/eslint": "^8",
     "@types/express": "^4.17.13",
     "@types/inquirer": "^8.2.1",
     "@types/jest": "27.5.0",
